# qizheng-tool

./: README.md  manage.sh  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  core.py  four_remnants.py  integrate.py  lunar.py  mansions.py  output.py  qiyun.py  seven_planets.py  solar_time.py  web_app.py  zs_remnants.py
